--- a/templates/presti.html
+++ b/templates/presti.html
@@ -6,13 +6,6 @@
     <title>TYPETR Presti</title>
     <link rel="icon" type="image/x-icon" href="images/logos/typetr.ico">
 
-    <!--
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4MzU4Mzc5NDUyMjc3MA%3D%3D.css" rel="stylesheet">    
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE3NzE2MzU4NjQ4Mw%3D%3D.css" rel="stylesheet">
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ3OTc4MjM2MjU4OTc3Nw%3D%3D.css" rel="stylesheet">
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4NDIwOTIwNzE5MjI1Nw%3D%3D.css" rel="stylesheet">
-
-    -->
     <!-- Presti VF -->
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ3OTc4MjM2MjU4OTc3Nw%3D%3D.css" rel="stylesheet">  
     
@@ -25,73 +18,6 @@
     <!-- Upgrade -->
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ%3D%3D.css" rel="stylesheet">
     
-    <!-- Responder P VF -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE4MDMzNDQ4MDM0NQ%3D%3D.css" rel="stylesheet">
-  
-    <!-- Responder P
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE3NzE2MzU4NjQ4Mw%3D%3D.css" rel="stylesheet">
-    -->
-
-    <!-- Responder M -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MjAwNzQwMDAwNzcxNjIxOTg1Mw%3D%3D.css" rel="stylesheet">
-
-    <!-- Proforma Ultra Light
-         Proforma Ultra Light Italic
-         Proforma Light
-         Proforma Light Italic
-         Proforma Book
-         Proforma Book Italic
-         Proforma Medium
-         Proforma Medium Italic
-         Proforma Semi Bold
-         Proforma Semi Bold Italic
-         Proforma Bold
-         Proforma Bold Italic
-    -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5MzI5Mjk1Mzk3MTYyOQ%3D%3D.css" rel="stylesheet">
-
-    <!-- Proforma Pro 
-        TP Proforma Pro Thin
-        TP Proforma Pro Thin Italic
-        TP Proforma Pro Regular
-        TP Proforma Pro Regular Italic
-        TP Proforma Pro Medium
-        TP Proforma Pro Medium Italic
-        TP Proforma Pro Bold
-        TP Proforma Pro Bold Italic
-        TP Proforma Pro Black
-        TP Proforma Pro Black Italic
-    -->    
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MjAwNTQyNzc2NDEzNjE1OTkxNw%3D%3D.css" rel="stylesheet">
-
-    <!-- Productus Book
-         Productus Book Italic
-         Productus Medium
-         Productus Medium Italic
-         Productus Semi Bold
-         Productus Semi Bold Italic
-         Productus Bold
-         Productus Bold Italic
-         Productus Black
-         Productus Black Italic
-    -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4OTE0MDgxMTExNTM4Mg%3D%3D.css" rel="stylesheet">
-
-    <!-- PowerLift Tight 
-         PowerLift Tight Outline 
-    -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4NTEzMjQ1NzM4ODg4NQ%3D%3D.css" rel="stylesheet">
-
-    <!-- Bitcount Mono -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5Nzk0NTI3NTk2NzcyNA%3D%3D.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://js.fontdue.com/fontdue.css">
-    <script type="text/javascript" src="https://js.fontdue.com/fontdue.js"></script>
-    
-    <!--
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-    -->
-
     <script>
      fontdue.initialize({
         url: "https://store.typetr.com",
@@ -137,7 +63,8 @@
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html">About</a></li>-->
+                <li><a href="eulas.html">EULA’s</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -146,42 +73,20 @@
         </div>
     </header>
 
-    <section class="slideshow">
-
-        <div class="slide active" style="background-image: url('images/2022/Presti_in_use_07_looking_at_art.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2022/Presti_in_use_08_buddha_cat_sits.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2022/Presti_in_use_09_freekdejonge.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2022/Presti_in_use_10_if_typedesign.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2022/Presti_in_use_2023_01.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2022/Presti_in_use_Its the end of the wordl_01.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2023/Presti-202302 PRES in use - M.C.Pig_02.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2023/Presti_in_use_raw_kale_01.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2022/Presti_in_use_02.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2022/Presti_in_use_03.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2022/Presti_in_use_04.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2022/Presti_in_use_06_Chocolate_heaven_neon.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2022/Presti_in_use_lucys_sky_bar_01.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2022/Presti_in_use_pure_care_02.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2022/Presti_in_use_songs of love and hate_01.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2022/Presti_in_use_vietnamees_bier_01.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2022/Presti-Typetr_font samples_03_valentine.jpg"></div>
-
-    </section>
-
     <div id="popup" class="popup">
       <div class="popup-content">
         <span class="close" onclick="document.getElementById('popup').style.display='none'">&times;</span>
         <section class="content">
           <div class="row">
             <div class="column font-selector size36 leading14">
-              <p class="presti"><a href="presti.html">Presti&nbsp;</a></p> 
-              <p class="productus"><a href="productus.html">Productus</a></p> 
-              <p class="powerlift-outline"><a href="powerlift.html">PowerLift</a></p> 
-              <!--<p class="proforma-pro"><a href="proforma-pro.html">Proforma&nbsp;Pro</a></p>-->
+              <p class="proforma-pro"><a href="proforma-pro.html">Proforma&nbsp;Pro</a></p>
               <p class="proforma-classic"><a href="proforma-classic.html">Proforma&nbsp;Classic</a></p> 
-              <p class="responder-p"><a href="responder-p.html">Responder&nbsp;P</a></p> 
-              <!--<p class="responder-m"><a href="responder-m.html">Responder&nbsp;M</a></p>-->
               <p class="upgrade"><a href="upgrade.html">Upgrade</a></p>
+              <p class="presti"><a href="presti.html">Presti&nbsp;</a></p> 
+              <p class="responder-p"><a href="responder-p.html">Responder&nbsp;P</a></p> 
+              <p class="powerlift-outline"><a href="powerlift.html">PowerLift</a></p> 
+
+              <p class="productus"><a href="productus.html">Productus</a></p> 
               <p class="bitcount"><a href="bitcount.html">Bitcount</a></p> 
             </div>
           </div>
