--- a/templates/productus.html
+++ b/templates/productus.html
@@ -6,64 +6,9 @@
     <title>TYPETR Presti</title>
     <link rel="icon" type="image/x-icon" href="images/logos/typetr.ico">
 
-    <!--
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4MzU4Mzc5NDUyMjc3MA%3D%3D.css" rel="stylesheet">    
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE3NzE2MzU4NjQ4Mw%3D%3D.css" rel="stylesheet">
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ3OTc4MjM2MjU4OTc3Nw%3D%3D.css" rel="stylesheet">
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4NDIwOTIwNzE5MjI1Nw%3D%3D.css" rel="stylesheet">
-
-    -->
-    <!-- Presti VF -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ3OTc4MjM2MjU4OTc3Nw%3D%3D.css" rel="stylesheet">  
-    
-    <!-- Presti Deck -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4NDIwOTIwNzE5MjI1Nw%3D%3D.css" rel="stylesheet">  
-    
-    <!-- Presti Text -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4NDUxMTg5MzMzNDc2OA%3D%3D.css" rel="stylesheet">
-
     <!-- Upgrade -->
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ%3D%3D.css" rel="stylesheet">
     
-    <!-- Responder P VF -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE4MDMzNDQ4MDM0NQ%3D%3D.css" rel="stylesheet">
-  
-    <!-- Responder P
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE3NzE2MzU4NjQ4Mw%3D%3D.css" rel="stylesheet">
-    -->
-
-    <!-- Responder M -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MjAwNzQwMDAwNzcxNjIxOTg1Mw%3D%3D.css" rel="stylesheet">
-
-    <!-- Proforma Ultra Light
-         Proforma Ultra Light Italic
-         Proforma Light
-         Proforma Light Italic
-         Proforma Book
-         Proforma Book Italic
-         Proforma Medium
-         Proforma Medium Italic
-         Proforma Semi Bold
-         Proforma Semi Bold Italic
-         Proforma Bold
-         Proforma Bold Italic
-    -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5MzI5Mjk1Mzk3MTYyOQ%3D%3D.css" rel="stylesheet">
-
-    <!-- Proforma Pro 
-        TP Proforma Pro Thin
-        TP Proforma Pro Thin Italic
-        TP Proforma Pro Regular
-        TP Proforma Pro Regular Italic
-        TP Proforma Pro Medium
-        TP Proforma Pro Medium Italic
-        TP Proforma Pro Bold
-        TP Proforma Pro Bold Italic
-        TP Proforma Pro Black
-        TP Proforma Pro Black Italic
-    -->    
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MjAwNTQyNzc2NDEzNjE1OTkxNw%3D%3D.css" rel="stylesheet">
-
     <!-- Productus Book
          Productus Book Italic
          Productus Medium
@@ -76,34 +21,6 @@
          Productus Black Italic
     -->
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4OTE0MDgxMTExNTM4Mg%3D%3D.css" rel="stylesheet">
-
-    <!-- Productus Book
-         Productus Book Italic
-         Productus Medium
-         Productus Medium Italic
-         Productus Semi Bold
-         Productus Semi Bold Italic
-         Productus Bold
-         Productus Bold Italic
-         Productus Black
-         Productus Black Italic
-    -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4OTE0MDgxMTExNTM4Mg%3D%3D.css" rel="stylesheet">
-
-    <!-- PowerLift Tight 
-         PowerLift Tight Outline 
-    -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4NTEzMjQ1NzM4ODg4NQ%3D%3D.css" rel="stylesheet">
-
-    <!-- Bitcount Mono -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5Nzk0NTI3NTk2NzcyNA%3D%3D.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://js.fontdue.com/fontdue.css">
-    <script type="text/javascript" src="https://js.fontdue.com/fontdue.js"></script>
-    
-    <!--
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-    -->
 
     <script>
      fontdue.initialize({
@@ -142,7 +59,8 @@
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html">About</a></li>-->
+                <li><a href="eulas.html">EULA’s</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
