--- a/templates/proforma-classic.html
+++ b/templates/proforma-classic.html
@@ -6,34 +6,8 @@
     <title>TYPETR Proforma Classic</title>
     <link rel="icon" type="image/x-icon" href="images/logos/typetr.ico">
 
-    <!--
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4MzU4Mzc5NDUyMjc3MA%3D%3D.css" rel="stylesheet">    
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE3NzE2MzU4NjQ4Mw%3D%3D.css" rel="stylesheet">
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ3OTc4MjM2MjU4OTc3Nw%3D%3D.css" rel="stylesheet">
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4NDIwOTIwNzE5MjI1Nw%3D%3D.css" rel="stylesheet">
-
-    -->
-    <!-- Presti VF -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ3OTc4MjM2MjU4OTc3Nw%3D%3D.css" rel="stylesheet">  
-    
-    <!-- Presti Deck -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4NDIwOTIwNzE5MjI1Nw%3D%3D.css" rel="stylesheet">  
-    
-    <!-- Presti Text -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4NDUxMTg5MzMzNDc2OA%3D%3D.css" rel="stylesheet">
-
-    <!-- Upgrade -->
+   <!-- Upgrade -->
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ%3D%3D.css" rel="stylesheet">
-    
-    <!-- Responder P VF -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE4MDMzNDQ4MDM0NQ%3D%3D.css" rel="stylesheet">
-  
-    <!-- Responder P
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE3NzE2MzU4NjQ4Mw%3D%3D.css" rel="stylesheet">
-    -->
-
-    <!-- Responder M -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MjAwNzQwMDAwNzcxNjIxOTg1Mw%3D%3D.css" rel="stylesheet">
 
     <!-- Proforma Ultra Light
          Proforma Ultra Light Italic
@@ -47,50 +21,6 @@
          Proforma Semi Bold Italic
          Proforma Bold
          Proforma Bold Italic
-    -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5MzI5Mjk1Mzk3MTYyOQ%3D%3D.css" rel="stylesheet">
-
-    <!-- Proforma Pro 
-        TP Proforma Pro Thin
-        TP Proforma Pro Thin Italic
-        TP Proforma Pro Regular
-        TP Proforma Pro Regular Italic
-        TP Proforma Pro Medium
-        TP Proforma Pro Medium Italic
-        TP Proforma Pro Bold
-        TP Proforma Pro Bold Italic
-        TP Proforma Pro Black
-        TP Proforma Pro Black Italic
-    -->    
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MjAwNTQyNzc2NDEzNjE1OTkxNw%3D%3D.css" rel="stylesheet">
-
-    <!-- Productus Book
-         Productus Book Italic
-         Productus Medium
-         Productus Medium Italic
-         Productus Semi Bold
-         Productus Semi Bold Italic
-         Productus Bold
-         Productus Bold Italic
-         Productus Black
-         Productus Black Italic
-    -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4OTE0MDgxMTExNTM4Mg%3D%3D.css" rel="stylesheet">
-
-    <!-- PowerLift Tight 
-         PowerLift Tight Outline 
-    -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4NTEzMjQ1NzM4ODg4NQ%3D%3D.css" rel="stylesheet">
-
-
-    <!-- Bitcount Mono -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5Nzk0NTI3NTk2NzcyNA%3D%3D.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://js.fontdue.com/fontdue.css">
-    <script type="text/javascript" src="https://js.fontdue.com/fontdue.js"></script>
-    
-    <!--
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     -->
 
     <script>
@@ -138,7 +68,8 @@
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html">About</a></li>-->
+                <li><a href="eulas.html">EULA’s</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -147,38 +78,20 @@
         </div>
     </header>
 
-    <section class="slideshow">
-
-        <div class="slide active" style="background-image: url('images/2023/Upgrade-20230326 UP Coffee cups colors.jpg');"></div>
-        <div class="slide active" style="background-image: url('images/2023/Upgrade-202302 - UP in use - Take your bag.jpg');"></div>
-        <div class="slide active" style="background-image: url('images/2022/Upgrade_in_use_02a.jpg');"></div>
-        <div class="slide active" style="background-image: url('images/2022/Upgrade_in_use_05_meeting_room.jpg');"></div>
-        <div class="slide active" style="background-image: url('images/2022/Upgrade_in_use_06_book_fruit colours.jpg');"></div>
-        <div class="slide active" style="background-image: url('images/2022/Upgrade_in_use_06_book_fruit_colours.jpg');"></div>
-        <div class="slide active" style="background-image: url('images/2022/Upgrade_in_use_07_book_memory_02.jpg');"></div>
-        <div class="slide active" style="background-image: url('images/2022/Upgrade_in_use_07_book_memory.jpg');"></div>
-        <div class="slide active" style="background-image: url('images/2022/Upgrade_in_use_08_Keep_calm.jpg');"></div>
-        <div class="slide active" style="background-image: url('images/2022/Upgrade_in_use_guatemala coffee_02.jpg');"></div>
-        <div class="slide active" style="background-image: url('images/2022/Upgrade_in_use_olde_unicorn_01.jpg');"></div>
-        <div class="slide active" style="background-image: url('images/2023/Upgrade-20230326 UP Coffee cups colors.jpg');"></div>
-        <div class="slide" style="background-image: url('images/2023/Upgrade-202302 - UP in use - Take your bag.jpg');"></div>
-
-    </section>
-
     <div id="popup" class="popup">
       <div class="popup-content">
         <span class="close" onclick="document.getElementById('popup').style.display='none'">&times;</span>
         <section class="content">
           <div class="row">
             <div class="column font-selector size36 leading14">
-              <p class="presti"><a href="presti.html">Presti&nbsp;</a></p> 
-              <p class="productus"><a href="productus.html">Productus</a></p> 
-              <p class="powerlift-outline"><a href="powerlift.html">PowerLift</a></p> 
-              <!--<p class="proforma-pro"><a href="proforma-pro.html">Proforma&nbsp;Pro</a></p>-->
+              <p class="proforma-pro"><a href="proforma-pro.html">Proforma&nbsp;Pro</a></p>
               <p class="proforma-classic"><a href="proforma-classic.html">Proforma&nbsp;Classic</a></p> 
-              <p class="responder-p"><a href="responder-p.html">Responder&nbsp;P</a></p> 
-              <!--<p class="responder-m"><a href="responder-m.html">Responder&nbsp;M</a></p>-->
               <p class="upgrade"><a href="upgrade.html">Upgrade</a></p>
+              <p class="presti"><a href="presti.html">Presti&nbsp;</a></p> 
+              <p class="responder-p"><a href="responder-p.html">Responder&nbsp;P</a></p> 
+              <p class="powerlift-outline"><a href="powerlift.html">PowerLift</a></p> 
+
+              <p class="productus"><a href="productus.html">Productus</a></p> 
               <p class="bitcount"><a href="bitcount.html">Bitcount</a></p> 
             </div>
           </div>
