Working on page sources

--- a/templates/productus.html
+++ b/templates/productus.html
@@ -60,7 +60,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>-->
-                <li><a href="eulas.html">EULA’s</a></li>
+                <li><a href="eulas.html">EULA</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -69,29 +69,20 @@
         </div>
     </header>
 
-    <section class="slideshow">
-
-        <div class="slide active" style="background-image: url('images/2022/Productus_in_use_flying_elephant_02.jpg"></div>
-        <div class="slide active" style="background-image: url('images/2018/Upgrade-stackedTypePages_4.png"></div>
-        <div class="slide active" style="background-image: url('images/2018/Upgrade-stackedTypePages_5.png"></div>
-        <div class="slide active" style="background-image: url('images/2018/Upgrade-stackedTypePages_6.png"></div>
-
-    </section>
-
     <div id="popup" class="popup">
       <div class="popup-content">
         <span class="close" onclick="document.getElementById('popup').style.display='none'">&times;</span>
         <section class="content">
           <div class="row">
             <div class="column font-selector size36 leading14">
-              <p class="presti"><a href="presti.html">Presti&nbsp;</a></p> 
-              <p class="productus"><a href="productus.html">Productus</a></p> 
-              <p class="powerlift-outline"><a href="powerlift.html">PowerLift</a></p> 
-              <!--<p class="proforma-pro"><a href="proforma-pro.html">Proforma&nbsp;Pro</a></p>-->
+              <p class="proforma-pro"><a href="proforma-pro.html">Proforma&nbsp;Pro</a></p>
               <p class="proforma-classic"><a href="proforma-classic.html">Proforma&nbsp;Classic</a></p> 
-              <p class="responder-p"><a href="responder-p.html">Responder&nbsp;P</a></p> 
-              <!--<p class="responder-m"><a href="responder-m.html">Responder&nbsp;M</a></p>-->
               <p class="upgrade"><a href="upgrade.html">Upgrade</a></p>
+              <p class="presti"><a href="presti.html">Presti&nbsp;</a></p> 
+              <p class="responder-p"><a href="responder-p.html">Responder&nbsp;P</a></p> 
+              <p class="powerlift-outline"><a href="powerlift.html">PowerLift</a></p> 
+
+              <p class="productus"><a href="productus.html">Productus</a></p> 
               <p class="bitcount"><a href="bitcount.html">Bitcount</a></p> 
             </div>
           </div>
