--- a/templates/proforma-classic.html
+++ b/templates/proforma-classic.html
@@ -69,7 +69,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>-->
-                <li><a href="eulas.html">EULA’s</a></li>
+                <li><a href="eulas.html">EULA</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
