--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -22,6 +22,16 @@ h1, h2, h3, h4, h5, h6 {
     font-synthesis: none; /* prevent browser from faking bold/italic */
 }
 
+.leading13 {
+    line-height: 1.3em;
+}
+.leading14 {
+    line-height: 1.4em;
+}
+.leading15 {
+    line-height: 1.5em;
+}
+
 /* General Styles */
 
 body {
@@ -35,7 +45,6 @@ body {
   line-height: 1;
   -webkit-text-size-adjust: none;
 }
-
 
 header {
     display: block;
