--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -574,12 +574,29 @@ div.image {
 .column14 {
     /*flex: 1;*/
     width: 25%;
+    padding-right: 12px;
     box-sizing: border-box;
     background-color: #F0F0F0;
 }
 .column34 {
     /*flex: 1;*/
     width: 75%;
+    padding-right: 12px;
+    box-sizing: border-box;
+    background-color: #F0F0F0;
+}
+
+.column13 {
+    /*flex: 1;*/
+    width: 33%;
+    padding-right: 12px;
+    box-sizing: border-box;
+    background-color: #F0F0F0;
+}
+.column23 {
+    /*flex: 1;*/
+    width: 66%;
+    padding-right: 12px;
     box-sizing: border-box;
     background-color: #F0F0F0;
 }
