--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -21,7 +21,16 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: none; /* or 400 */
     font-synthesis: none; /* prevent browser from faking bold/italic */
 }
-
+h2 a:link, h2 a:visited, h2 a:active {
+    font-family: "Upgrade Medium";    
+    text-decoration: none;
+    font-size: 1.1em;
+    font-weight: 600;
+    color: #202020;
+}
+h2 a:hover {
+    color: #808080;
+}
 .leading13 {
     line-height: 1.3em;
 }
@@ -223,7 +232,12 @@ header {
 }
 .upgrade-bold {
     font-family: "Upgrade Bold";    
-    font-weight: 400;
+    font-weight: 700;
+    letter-spacing: 0.02em;
+}
+.upgrade-medium {
+    font-family: "Upgrade Medium";    
+    font-weight: 500;
     letter-spacing: 0.02em;
 }
 .upgrade-thin {
@@ -621,6 +635,7 @@ footer div {
 
 div.type-tester {
     padding: 1em;
+    width: 98%;
 }
 fontdue-type-testers {
     font-size: 8em;
@@ -666,16 +681,13 @@ button:hover {
     .row {
         flex-direction: column;
     }
-
     .column {
         width: 100%;
     }
-
-    .column p, .column h1{
-        padding-left: 20px;
-        padding-right: 20px;
+    .column p, .column h1, .column h2 {
+        padding-left: 16px;
+        padding-right: 16px;
     }
-
     .navbar.active {
         display: block;
         position: absolute;
@@ -695,7 +707,6 @@ button:hover {
         margin: 10px 0;
         padding-right: 60px;
     }
-
     .popup-content {
       margin-top:70px;
       margin-left:0px;
@@ -704,7 +715,6 @@ button:hover {
       border-radius: 0px;
       z-index: 60;
     }
-
     div.image {
         position: float;
         width: 100%;
