--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -669,19 +669,40 @@ button:hover {
 }
 /* Media Queries */
 
-@media (min-width: 1500px) {
+/* Extra Small Phones (320–359px) */
+@media (max-width: 359px) { 
     header {
-        background-color: yellow; /* Testing responsive */
+        background-color: brown; /* Testing responsive */
     }    
-    .row{
-        width: 1500px;
-        margin:0 auto;
-    }
 }
-
-@media (max-width: 899px) { /* Phone widths */
+/* Small Phones (360–399px) */
+@media (min-width: 360px) and (max-width: 399px) { 
     header {
-        background-color: green; /* Testing responsive */
+        background-color: lightgray; /* Testing responsive */
+    }    
+}
+/* Medium Phones (400–479px) */
+@media (min-width: 400px) and (max-width: 479px) { 
+    header {
+        background-color: orange; /* Testing responsive */
+    }    
+}
+/* Large Phones (480–599px) */
+@media (min-width: 480px) and (max-width: 599px) { 
+    header {
+        background-color: pink; /* Testing responsive */
+    }    
+}
+/* Small Tablets (600–767px) */
+@media (min-width: 600px) and (max-width: 767px) { 
+    header {
+        background-color: gray; /* Testing responsive */
+    }    
+}
+/* Medium Tablets (768–991px) */
+@media (min-width: 768px) and (max-width: 991px) { 
+    header {
+        background-color: purple; /* Testing responsive */
     }    
     header .navbar {
         display: none;
@@ -699,88 +720,33 @@ button:hover {
     font-size: 4em;  
     }
 }
-
-@media (max-width: 768px) {
+/* Large Tablets / Small Desktop (992–1199px) */
+@media (min-width: 992px) and (max-width: 1199px) { 
     header {
-        background-color: orange; /* Testing responsive */
+        background-color: blue; /* Testing responsive */
     }    
-    header .navbar {
-        display: none;
-    }
-    .hamburger {
-        display: block;
-    }
-    .fontIcon {
-        display: block;
-    }
-    .row {
-        flex-direction: column;
-    }
-    .column {
-        width: 100%;
-    }
-    .column p, .column h1, .column h2 {
-        padding-left: 16px;
-        padding-right: 16px;
-    }
-    .navbar.active {
-        display: block;
-        position: absolute;
-        background-color: #333;
-        width: 100%;
-        box-align: 'right';
-        top: 70px;
-        margin-left: -10px;
-        text-align: right;
-          z-index: 1000;
-
-    }
-    .navbar ul {
-        flex-direction: column;
-    }
-    .navbar li {
-        margin: 10px 0;
-        padding-right: 60px;
-    }
-    .popup-content {
-      margin-top:70px;
-      margin-left:0px;
-      width: 100%;
-      max-width: 100%;
-      border-radius: 0px;
-      z-index: 60;
-    }
-    div.image {
-        position: float;
-        width: 100%;
-        padding: 0;
-        padding-top: 56.25%; 
-        background-size: cover;
-        background-position: center;
-    }
-    div.column14, div.column34 {
-        width: 100%;
-        padding: 16px;
-    }
-    div.responsiveHide, div.familyName, img.responsiveHide {
-        display: none;
-    }
-    /* Type testers */
-
-    div.type-tester {
-        padding: 0.5em;
-    }
-    fontdue-type-testers {
-        font-size: 6em;
-        padding: 0;
-    }
-
-    button.buy-button {
-        display: block;
-        margin: 1em auto 0;
-    }
-
 }
+/* Desktop (1200–1599px) */
+@media (min-width: 1200px) and (max-width: 1599px) { 
+    header {
+        background-color: pink; /* Testing responsive */
+    }    
+    .row{
+        width: 1500px;
+        margin:0 auto;
+    }
+}
+/* Large Desktop (1600px+) */
+@media (min-width: 1600px) { 
+    header {
+        background-color: yellow; /* Testing responsive */
+    }    
+    .row{
+        width: 1500px;
+        margin:0 auto;
+    }
+}
+
 
 
 div.type-tester {
